# projeto_kinect

./: .gitignore  CMakeList.txt  CMakeLists.txt  Dockerfile  README.md  build_for_linux.sh  build_in_linux.sh  docker-compose.yaml  vcpkg.json
scripts/: build_libfreenect2.sh  build_opencv.sh  build_openni2.sh
src/: main.cpp
